# hello-rs

./: Cargo.toml  README.md  hello-rs_0.1.0.bb
scripts/: build.sh  launchRemoteGDB.sh
src/: main.rs
