[package]
name = "hello-rs"
version = "0.1.0"
authors = ["Gustavo Branco <guster32@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Hello World application"
repository = "https://github.com/guster32/hello-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
